--- a/src/_app-common.scss
+++ b/src/_app-common.scss
@@ -89,7 +89,7 @@
 .label-detail {
   border-left-color: $grey-background;
   border-left-width: 1;
-  //background-color: $focus;
+  background-color: $focus;
   height: 50;
   padding: 13 10 10 10;
   margin-left: 10;
