--- a/src/app/home/about/about.component.tns.html
+++ b/src/app/home/about/about.component.tns.html
@@ -1,12 +1,12 @@
 <TextView editable="false">
     <FormattedString>
-        <Span [text]="('A prototype application for the organization of competitions, the process of which is associated with the time stamps on the control points.\n'+
+        <Span [text]="('A prototype application for the organization of competitions, the process of which is associated with the time stamps on the control points.\n\n'+
 'The winners are the athletes who have passed the greater (all) number of control points for a smaller number of time, in the order of points.')|L"></Span>
     </FormattedString>
 </TextView>
 <Button (tap)="onMailTo()" height="120" class="p-10 btn -outline -active text-left">
     <FormattedString>
-        <Span [text]="'Suggestions and suggestions send to the address'|L "></Span>
+        <Span [text]="'Suggestions and suggestions send to the address '|L "></Span>
         <Span text="agestart@gmail.com " fontWeight="Bold"></Span>
         <Span [text]="'or to the telegram'|L "></Span>
         <Span text="@ivanfed1" fontWeight="Bold"></Span>
