--- a/src/app/app.component.tns.html
+++ b/src/app/app.component.tns.html
@@ -22,7 +22,7 @@
                             columns="auto, *"
                             class="side-label">
                     <Label col="0" text="&#xf559;" class="fas"></Label>
-                    <Label [text]="'Competition'|L" col="1"></Label>
+                    <Label [text]="'Competitions'|L" col="1"></Label>
                 </GridLayout>
 
                 <GridLayout *ngIf="_competition.selected_competition"
