--- a/src/app/home/stat/stat.component.tns.html
+++ b/src/app/home/stat/stat.component.tns.html
@@ -1,6 +1,16 @@
 <StackLayout [ngSwitch]="competition" class="p-10">
     <StackLayout *ngSwitchDefault>
         <Label class="h1" [text]="competition.title" textWrap="true"></Label>
+
+        <Label [text]="('Current timezone '|L) + current_timezone" class="font-weight-bold"></Label>
+        <Label [text]="('Start date: '|L) + (_competition.start_time|tzdate:'dd.MM.yy HH:mm:ss':competition.timezone)"></Label>
+        <Label [text]="('Finish date: '|L) + (_competition.finish_time|tzdate:'dd.MM.yy HH:mm:ss':competition.timezone)"></Label>
+
+        <Label [text]="('Timezone of the competition place\n'|L) + competition.timezone" textWrap="true" class="font-weight-bold"></Label>
+        <Label [text]="('Start date: '|L) + (_competition.start_time|date:'dd.MM.yy HH:mm:ss')"></Label>
+        <Label [text]="('Finish date: '|L) + (_competition.finish_time|date:'dd.MM.yy HH:mm:ss')"></Label>
+
+        <Label [text]="'Info'|L" class="font-weight-bold"></Label>
         <Label [text]="('Total registered athletes: '|L) + athlets_count"></Label>
         <Label *ngFor="let _class of competition.classes" [text]="('Class: '|L) + _class + ' ' + (by_class_count.hasOwnProperty(_class) ? by_class_count[_class] : ('wait'|L))"></Label>
         <Button class="btn -primary scan" [text]="'Scan'|L" [nsRouterLink]="['/scan']"></Button>
