--- a/src/app/home/stat/stat.component.tns.html
+++ b/src/app/home/stat/stat.component.tns.html
@@ -6,7 +6,7 @@
         <Label [text]="('Start date: '|L) + (_competition.start_time|tzdate:'dd.MM.yy HH:mm:ss':competition.timezone)"></Label>
         <Label [text]="('Finish date: '|L) + (_competition.finish_time|tzdate:'dd.MM.yy HH:mm:ss':competition.timezone)"></Label>
 
-        <Label [text]="('Timezone of the competition place\n'|L) + competition.timezone" textWrap="true" class="font-weight-bold"></Label>
+        <Label [text]="('Timezone of the competition place'|L) + '\n' + competition.timezone" textWrap="true" class="font-weight-bold"></Label>
         <Label [text]="('Start date: '|L) + (_competition.start_time|date:'dd.MM.yy HH:mm:ss')"></Label>
         <Label [text]="('Finish date: '|L) + (_competition.finish_time|date:'dd.MM.yy HH:mm:ss')"></Label>
 
