--- a/src/app/web/routes/dashboard/dashboard-detail/dashboard-detail.component.html
+++ b/src/app/web/routes/dashboard/dashboard-detail/dashboard-detail.component.html
@@ -79,12 +79,13 @@
                     </canvas>
                 </mat-card-content>
             </mat-card>
-            <mat-card fxFlex="0 0 200px">
-                <mat-card-content>
-                    <a mat-flat-button (click)="onAdmin('add_athlets')">Заполнить атлетов</a>
-                    <a mat-flat-button (click)="onAdmin('remove_athlets')">Очистить</a>
-                </mat-card-content>
-            </mat-card>
+
+<!--            <mat-card fxFlex="0 0 200px">-->
+<!--                <mat-card-content>-->
+<!--                    <a mat-flat-button (click)="onAdmin('add_athlets')">Заполнить атлетов</a>-->
+<!--                    <a mat-flat-button (click)="onAdmin('remove_athlets')">Очистить</a>-->
+<!--                </mat-card-content>-->
+<!--            </mat-card>-->
 
         </div>
     </mat-tab>
