--- a/src/app/web/routes/dashboard/dashboard-edit/dashboard-edit.component.html
+++ b/src/app/web/routes/dashboard/dashboard-edit/dashboard-edit.component.html
@@ -1,8 +1,11 @@
-<mat-card class="mat-elevation-z4 m-b-0" fxFlex="400px" fxFlex.xs="90%">
-    <mat-card-title class="text-center m-b-24">{{competition.title}}</mat-card-title>
-    <mat-card-subtitle class="text-center m-b-24">Изменение участника</mat-card-subtitle>
-    <mat-card-content>
-        <athlet-change [competition]="competition" [athlet]="athlet" (onCreated)="onCreated($event)"></athlet-change>
-    </mat-card-content>
-</mat-card>
-
+<page-header [title]="athlet.fio"></page-header>
+<div>
+    <mat-card class="mat-elevation-z4 m-b-0" fxFlex="400px" fxFlex.xs="90%">
+        <mat-card-title class="text-center m-b-24">{{competition.title}}</mat-card-title>
+        <mat-card-subtitle class="text-center m-b-24">Изменение участника</mat-card-subtitle>
+        <mat-card-content>
+            <athlet-change [competition]="competition" [athlet]="athlet"
+                           (onCreated)="onCreated($event)"></athlet-change>
+        </mat-card-content>
+    </mat-card>
+</div>
