--- a/src/app/web/routes/results/results-admin/results-admin.component.html
+++ b/src/app/web/routes/results/results-admin/results-admin.component.html
@@ -1,5 +1,7 @@
+<page-header [title]="competition.title"></page-header>
+
 <mat-tab-group [hidden]="hasChildren">
-    <mat-tab *ngFor="let _class of classes" [label]="_class|titlecase">
+    <mat-tab *ngFor="let _class of competition.classes" [label]="_class|titlecase">
         <app-results [classes]="[_class]"></app-results>
     </mat-tab>
 </mat-tab-group>
