--- a/src/app/web/routes/app-athlet-register/app-athlet-register.component.html
+++ b/src/app/web/routes/app-athlet-register/app-athlet-register.component.html
@@ -25,7 +25,7 @@
                                 <mat-form-field class="full-width">
                                     <mat-label>Телефонный номер</mat-label>
 
-                                    <span matPrefix>+7 &nbsp;</span>
+                                    <div matPrefix>+7 &nbsp;</div>
                                     <input (input)="onPhoneInput()" type="tel" matInput placeholder="Телефон"
                                            formControlName="phone"
                                            required>
