--- a/src/app/web/routes/dashboard/dashboard.component.html
+++ b/src/app/web/routes/dashboard/dashboard.component.html
@@ -22,9 +22,9 @@
                     <mat-list-item>
                         <mat-icon mat-list-icon>date_range</mat-icon>
                         <h4 mat-line>Начало</h4>
-                        <p mat-line> {{ getFullDate(competition.start_date, competition.start_time)|date:"yyyy-dd-MM HH:mm:ss z" }} </p>
+                        <p mat-line> {{ getFullDate(competition.start_date, competition.start_time, competition.timezone)|date:"yyyy-dd-MM HH:mm:ss z" }} </p>
                         <p *ngIf="current_timezone != competition.timezone" mat-line matTooltip="Начало в выбранном часовом поясе">
-                            {{ getFullDate(competition.start_date, competition.start_time)|date:"yyyy-dd-MM HH:mm:ss z":getTzOffset(competition.timezone) }}
+                            {{ getFullDate(competition.start_date, competition.start_time, competition.timezone)|date:"yyyy-dd-MM HH:mm:ss z":getTzOffset(competition.timezone) }}
                         </p>
                     </mat-list-item>
                     <mat-list-item>
