--- a/src/app/web/routes/public/app-athlet-register/app-athlet-register.component.html
+++ b/src/app/web/routes/public/app-athlet-register/app-athlet-register.component.html
@@ -78,6 +78,9 @@
 
                         </div>
                     </div>
+                    <p>
+                        <a [routerLink]="['public', 'competition', competition.id]">Список участников</a>
+                    </p>
                 </div>
 
                 <h3 *ngSwitchCase="true" class="text-center text-red-400">
