--- a/src/app/web/routes/private-policy/private-policy.component.html
+++ b/src/app/web/routes/private-policy/private-policy.component.html
@@ -1,4 +1,4 @@
-<div class="private-policy-container p-32" fxLayout="row wrap" fxLayoutAlign="center center">
+<div class="public-container p-32" fxLayout="row wrap" fxLayoutAlign="center center">
     <mat-card fxFlex="60%" fxFlex.md="80%" fxFlex.lt-md="95%">
         <mat-card-header>
             <mat-card-title>
