--- a/src/app/web/routes/public/app-athlet-register/success-dialog.component.html
+++ b/src/app/web/routes/public/app-athlet-register/success-dialog.component.html
@@ -1,10 +1,12 @@
 <div mat-dialog-content fxLayout="column" fxLayoutAlign="center center">
-    <h3 class="m-0">{{ data.title }}</h3>
+    <h3 class="m-0">{{ data.competition.title }}</h3>
     <p>
         <notification></notification>
     </p>
 </div>
 <div mat-dialog-actions>
-    <button mat-button mat-flat-button color="primary">Список атлетов</button>
+    <button mat-button mat-flat-button
+            color="primary"
+            [routerLink]="['public','competition', data.competition.id]">Список атлетов</button>
     <button mat-button mat-flat-button cdkFocusInitial (click)="closeDialog()">Закрыть</button>
 </div>
