--- a/src/styles_custom/custom_app.scss
+++ b/src/styles_custom/custom_app.scss
@@ -62,3 +62,25 @@
 .global-loader-fade-in {
   opacity: 0;
 }
+
+.public-container {
+  min-height: 100%;
+  background-color: #212121;
+  background-image: linear-gradient(
+                  45deg,
+                  rgba(255, 255, 255, .05) 25%,
+                  transparent 25%,
+                  transparent 75%,
+                  rgba(255, 255, 255, .05) 75%,
+                  rgba(255, 255, 255, .05)
+  ),
+  linear-gradient(
+                  -45deg,
+                  rgba(255, 255, 255, .05) 25%,
+                  transparent 25%,
+                  transparent 75%,
+                  rgba(255, 255, 255, .05) 75%,
+                  rgba(255, 255, 255, .05)
+  );
+  background-size: 60px 60px;
+}
